package com.shubham.project.spring_network.model;

public class Profile {
}
