package com.shubham.project.spring_network.persistence.model;

import jakarta.persistence.Entity;

//@Entity
public class Account {
    /**
     * int id;
     *     String platform;
     *     String username;
     *     String email UNIQUE;
     *     Strong phone UNIQUE;
     *     AccountStatus status;
     *
     *     public void resetStatus();
     *     public void setStatus();
     */


}
